# ainakan

./: .cirrus.yml  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  meson.build  meson.options
.github/actions/package-ios-assets/: action.yml
.github/actions/package-tvos-assets/: action.yml
.github/actions/prepare-python-packages/: action.yml
.github/actions/publish-debs/: action.yml
.github/actions/setup-freebsd-env/: action.yml
.github/actions/setup-linux-env/: action.yml
.github/actions/setup-macos-env/: action.yml
.github/actions/setup-windows-env/: action.yml
.github/scripts/: package-cirrus-ci-artifacts.sh  rename-release-assets.sh  repo.py
.github/workflows/: ci.yml
tools/: ensure-submodules.py
