option('ainakan_tools',
  type: 'feature',
  value: 'auto',
  description: 'Build CLI tools, like ainakan, ainakan-trace, etc.',
)

option('graft_tool',
  type: 'feature',
  value: 'auto',
  description: 'Build gum-graft tool',
)

option('gadget',
  type: 'feature',
  value: 'auto',
  description: 'Build ainakan-gadget',
)

option('server',
  type: 'feature',
  value: 'auto',
  description: 'Build ainakan-server',
)

option('portal',
  type: 'feature',
  value: 'disabled',
  description: 'Build ainakan-portal',
)

option('inject',
  type: 'feature',
  value: 'auto',
  description: 'Build ainakan-inject',
)

option('ainakan_clr',
  type: 'feature',
  value: 'disabled',
  description: 'Build .NET bindings',
)

option('ainakan_node',
  type: 'feature',
  value: 'disabled',
  description: 'Build Node.js bindings',
)

option('ainakan_python',
  type: 'feature',
  value: 'auto',
  description: 'Build Python bindings',
)

option('ainakan_swift',
  type: 'feature',
  value: 'disabled',
  description: 'Build Swift bindings',
)

option('ainakan_qml',
  type: 'feature',
  value: 'disabled',
  description: 'Build QML bindings',
)
